# cs_mipt_faki

./: .clang-format  .gitignore  README.md  batch_commands.txt  delete_aux_files.bat
data/ppm_images/: example_text.ppm  peasants1909.ppm
module1_basics/intro/: install.txt
module1_basics/intro/code_style/: 01ob.c  04space_operators.c
module1_basics/intro/coding_style/: 00style.c  02indentation.c  03tabs_vs_spaces.c  05comma_space.c  coding_style.tex
module1_basics/intro/command_line_basics/: command_line_basics.tex
module1_basics/intro/installation_windows/: installation_windows.tex
module1_basics/intro/typical_mistakes/: 00save_compile_run.c  01printf.c  01printf_solution.c  02scanf.c  02scanf_solution.c  03scanf_space.c  03scanf_space_solution.c  04assignment.c  04assignment_solution.c  05if.c  05if_solution.c  06if.c  06if_solution.c  07while.c  07while_solution.c  08while.c  08while_solution.c  09while.c  09while_solution.c  10init.c  10init_solution.c
module1_basics/questions/: questions.tex
module1_basics/seminar1_hello/homework/: homework_hello.tex  homework_typical_mistakes.tex
module1_basics/seminar1_hello/theory/: theory_hello.tex
module1_basics/seminar2_function_and_type/homework/: homework_1function.tex  homework_2types.tex
module1_basics/seminar2_function_and_type/theory/: theory_1function.tex  theory_2types.tex
module1_basics/seminar3_string/homework/: homework_string.tex
module1_basics/seminar3_string/theory/: theory_string.tex
module1_basics/seminar4_pointer_and_struct/homework/: homework_pointer.tex  homework_struct.tex  videogames.txt
module1_basics/seminar4_pointer_and_struct/theory/: theory_pointer.tex  theory_struct.tex
module1_basics/seminar5_segments/homework/: homework_segments.tex
module2_classes_and_templates/coding_style/: coding_style.tex
module2_classes_and_templates/questions/: module2_questions.tex
module2_classes_and_templates/usefull_code_samples/: get_type_name.cpp  ranges_test.cpp  typeid_test.cpp  verbose_v1.cpp  verbose_v2.cpp
module3_oop/questions/: module3_questions.tex
module3_oop/seminar4_state/homework/: CMakeLists.txt  homework_state.tex
module3_oop/seminar4_state/homework/src/: animation.hpp  main.cpp  player.cpp  player.hpp  player_states.cpp  player_states.hpp  world.hpp
module3_oop/seminar99_game/platformer_game/: CMakeLists.txt  Makefile  readme.txt
module3_oop/seminar99_game/platformer_game/savefiles/: default.lvl
module3_oop/seminar99_game/platformer_game/src/: animation.h  editor.cpp  main.cpp  player.cpp  player.h  player_states.cpp  player_states.h  tiles.h  tileworld.h
module4_utils/questions/: module4_questions.tex
module4_utils/seminar2_cmake_basics/classroom_tasks/code/1targets/06three_targets_options/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/0cache_variables/3cache_types/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/0cache_variables/4options/: CMakeLists.txt  cat.cpp  dog.cpp
module4_utils/seminar3_cmake_properties/code/1predefined_variables/0source_and_binary_dir/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/1predefined_variables/1current_source_and_binary_dir/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/1predefined_variables/4compiler_info_vars/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/1predefined_variables/6other/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/2properties/00global_properties/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/2properties/01directory_properties/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/2properties/01directory_properties/cube/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/2properties/02target_properties/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/2properties/03source_properties/: CMakeLists.txt  cube.cpp  main.cpp
module4_utils/seminar3_cmake_properties/code/2properties/11print_all_variables/: CMakeLists.txt  print_all_variables.cmake
module4_utils/seminar3_cmake_properties/code/2properties/13print_all_targets/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/2properties/14simple_image_project/: CMakeLists.txt  main.cpp
module4_utils/seminar3_cmake_properties/code/2properties/15target_properties/: CMakeLists.txt
module4_utils/seminar3_cmake_properties/code/5generator_expressions/0choosing_source/: CMakeLists.txt  dog.cpp
module4_utils/seminar3_cmake_properties/code/5generator_expressions/1choosing_source_by_config/: CMakeLists.txt
module4_utils/seminar4_cmake_extern_modules/code/05find_package/: CMakeLists.txt
module4_utils/seminar4_cmake_extern_modules/code/05find_package/cmake/: FindCat.cmake
module4_utils/seminar4_cmake_extern_modules/code/15fetch_content/: CMakeLists.txt  main.cpp
module4_utils/seminar4_cmake_extern_modules/code/boost_findpkg/: CMakeLists.txt  main.cpp
module4_utils/seminar4_cmake_extern_modules/code/box2d_fetchc/: CMakeLists.txt  main.cpp
module4_utils/seminar5_testing/code/0testing/2factorial_ctest/: CMakeLists.txt  factorial.cpp  factorial.hpp  main.cpp  test1.cpp  test2.cpp
module4_utils/seminar5_testing/code/3gtest_fixture/: CMakeLists.txt  main.cpp  myTest.cpp
module4_utils/seminar5_testing/code/4gmock/: CMakeLists.txt
module5_advanced/questions/: module5_questions.tex
module6_concurrency/concepts/: totally_ordered.cpp
module6_concurrency/questions/: questions_module3.tex  questions_module4.tex
module6_concurrency/seminar9_asio/theory/code/0test/: 01test.cpp  02test.cpp  03test.cpp  CMakeLists.txt
module6_concurrency/seminar9_asio/theory/code/1timer/: 01timer.cpp  02timer.cpp  03timer.cpp  04timer.cpp  05timer.cpp  CMakeLists.txt
module6_concurrency/seminar9_asio/theory/code/2daytime/: 01daytime_client.cpp  01daytime_server.cpp  03daytime_async_server.cpp  CMakeLists.txt
module6_concurrency/seminar9_asio/theory/code/3chat/: CMakeLists.txt  chat_client.cpp  chat_message.hpp  chat_server.cpp
other/data/ppm_images/: emir.ppm  (+1 more)
talks/image_processing/: talk_image_processing.tex
(+1672 files in other folders)
